# cyris

./: .coverage  .gitignore  =1.40.0  =14.1.0  =2.10.0  =2.11.0  =25.0.0  =4.0.0  =45.0.0  =6.0.0  =7.0.0  =8.2.0  =8.4.0  BUGFIX_RECORD.md  CHANGES  CLAUDE.md  CONFIG  CONTRIBUTORS  CRITICAL_BUG_FIXES_SUMMARY.md  ENHANCED_KVM_AUTO_IMPLEMENTATION.md  ENHANCED_PTY_IMPLEMENTATION_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_SUBPROCESS_BUG_FIX.md  HOST-PREPARE.sh  LICENSE  MODERNIZATION_DESIGN.md  PARSING_FIX_SUMMARY.md  PYDANTIC_V2_MIGRATION_NOTES.md  README.md  RICH_PROGRESS_TEST_RESULTS.md  TESTING_RICH_PROGRESS.md  config.yml  cyris  cyris-cli  debug_parser.py  demo_vm_ip_discovery.py  deploy.sh  destroy_all_cr_README.md  pyproject.toml  requirements-minimal.txt  (+45 more)
.bmad-core/: install-manifest.yaml
.claude/: ARCHITECTURE_DECISIONS.md  MIGRATION_GUIDE.md  PERFORMANCE_TEST.md  index.json
.spec-workflow/: session.json
config/: CHANGES
cyber_range/: README  ranges_metadata.json.bak  ranges_resources.json.bak
docs/: CLAUDE.md  cloud-init-setup-guide.md
examples/: CLAUDE.md  arch_test.yml  basic.yml  full-adapted.yml  full_comprehensive_test.yml  full_fixed.yml  full_test.yml  test_add_account.yml
images/: basevm.xml
instantiation/: 1.sh  CLAUDE.md
logs/: README.md
main/: aws_instances.py  clone_environment.py  cyris.py  cyvar.py  entities.py  modules.py  parse_config.py
scripts/: HOST-PREPARE.sh  activate-env.sh  create-cloud-init-iso.sh  deploy.py  destroy_all_cr.sh  fix_all_imports.py  fix_all_relative_imports.py  fix_chinese_text.py  fix_import_paths.py  (+7 more)
(+234 files in other folders)
