[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cyris"
version = "1.4.0"
description = "Cyber Range Instantiation System - 网络安全培训环境自动化部署工具"
authors = ["CyRIS Team <cyris@jaist.ac.jp>"]
license = "BSD-3-Clause"
readme = "README.md"
packages = [{include = "cyris", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"
paramiko = "^3.0"
boto3 = "^1.34"
psutil = "^5.9"
pydantic = "^2.0"
structlog = "^23.0"
click = "^8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"
pytest-mock = "^3.10"
pytest-asyncio = "^0.21"
black = "^23.0"
flake8 = "^6.0"
mypy = "^1.0"
pre-commit = "^3.0"
testcontainers = "^3.7"

[tool.poetry.scripts]
cyris = "cyris.cli.main:main"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=cyris --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # 排除原始代码目录，避免格式化原始代码
  main/
  | instantiation/
  | cleanup/
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = [
    "main/",
    "instantiation/", 
    "cleanup/"
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/main/*",
    "*/instantiation/*", 
    "*/cleanup/*"
]